--- a/src/GUI/index/index.html
+++ b/src/GUI/index/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../node_modules/bootstrap/dist/css/bootstrap.min.css">
 
 </head>
 
 <body>
-    
 
     <!-- Auto Updater -->
     <div class="version">
@@ -26,5 +25,5 @@
 </body>
 
 <script src="./index.js"></script>
-<script src="../auto-updater/updater.js"></script>
+<script src="../../auto-updater/updater.js"></script>
 </html>
