--- a/src/GUI/index/index.html
+++ b/src/GUI/index/index.html
@@ -13,7 +13,8 @@
 <body>
 
     <div class="header-row row">
-        <div class="col-sm-1">
+        <div class="col-sm-1 breathe-top">
+            <!-- System Dropdown -->
             <div class="dropdown">
                 <button id="systemDrp" class="btn dropdown-toggle btnDropdown"
                     type="button" data-toggle="dropdown"><strong>⚗️System</strong>
@@ -24,7 +25,8 @@
             </div>
         </div>
 
-        <div class="col-sm-1 breathe-left">
+        <div class="col-sm-1 breathe-left breathe-top">
+            <!-- Subsystem Dropdown -->
             <div class="dropdown">
                 <button id="subsysDrp" class="btn dropdown-toggle btnDropdown"
                     type="button" data-toggle="dropdown"><strong>⚒️Subsystem</strong>
@@ -33,6 +35,29 @@
                     <!-- This is loaded dynamically from the database (all subsystem names) -->
                 </ul>
             </div>
+        </div>
+
+        <div class="col-sm-4 bigbreathe-left">
+            <!-- Textbox for query input -->
+            <input class="form-control input-lg darkInput" id="inputlg" type="text"
+                    placeholder="🔎︎ search using custom filters">
+        </div>
+
+        <div class="col-sm-1 breathe-top">
+            <!-- Order by Dropdown -->
+            <div class="dropdown">
+                <button id="sortDrp" class="btn dropdown-toggle btnDropdown"
+                    type="button" data-toggle="dropdown"><strong>Order By</strong>
+                <span class="caret"></span></button>
+                <ul class="dropdown-menu">
+                    <!-- This is loaded dynamically from the database (all subsystem names) -->
+                </ul>
+            </div>
+        </div>
+
+        <!-- Opens the add window -->
+        <div class="col-sm-1 bigbreathe-left breathe-top">
+            <button id="addIssue" class="btn btnAdd" type="button"><strong>NEW 🚀</strong></button>
         </div>
     </div>
 
