--- a/src/GUI/index/index.html
+++ b/src/GUI/index/index.html
@@ -19,7 +19,7 @@
                 <button id="systemDrp" class="btn dropdown-toggle btnDropdown"
                     type="button" data-toggle="dropdown"><strong>⚗️System</strong>
                 <span class="caret"></span></button>
-                <ul class="dropdown-menu">
+                <ul id="sysDrpContent" class="dropdown-menu">
                     <!-- This is loaded dynamically from the database (all system names) -->
                 </ul>
             </div>
@@ -27,11 +27,11 @@
 
         <div class="col-sm-1 breathe-left breathe-top">
             <!-- Subsystem Dropdown -->
-            <div class="dropdown">
+            <div id="subsysDrpDiv" class="dropdown">
                 <button id="subsysDrp" class="btn dropdown-toggle btnDropdown"
                     type="button" data-toggle="dropdown"><strong>⚒️Subsystem</strong>
                 <span class="caret"></span></button>
-                <ul class="dropdown-menu">
+                <ul id="subsysDrpContent" class="dropdown-menu">
                     <!-- This is loaded dynamically from the database (all subsystem names) -->
                 </ul>
             </div>
