dynamic query details & dropdown reloading

--- a/src/GUI/index/index.html
+++ b/src/GUI/index/index.html
@@ -67,7 +67,12 @@
     <!-- Query Details Section -->
     <section>
         <div class="row">
-
+            <ul id="queryDisplay" class="hidden">
+                <li class="floatLeft">Queries: </li>
+                <li id="systemQuery" class="queryDisplay floatLeft hidden"></li>
+                <li id="subsystemQuery" class="queryDisplay floatLeft hidden"></li>
+                <li id="otherQuery" class="queryDisplay floatLeft hidden"></li>
+            </ul>
         </div>
     </section>
 
