otherquery text box working & error handling

--- a/src/GUI/index/index.html
+++ b/src/GUI/index/index.html
@@ -41,7 +41,7 @@
 
             <div class="col-sm-4 bigbreathe-left">
                 <!-- Textbox for query input -->
-                <input class="form-control input-lg darkInput" id="inputlg" type="text"
+                <input class="form-control input-lg darkInput" id="otherQueryInput" type="text"
                         placeholder="🔎︎ search using custom filters">
             </div>
 
@@ -69,9 +69,9 @@
         <div class="row">
             <ul id="queryDisplay" class="hidden">
                 <li class="floatLeft">Queries: </li>
-                <li id="systemQuery" class="queryDisplay floatLeft hidden"></li>
-                <li id="subsystemQuery" class="queryDisplay floatLeft hidden"></li>
-                <li id="otherQuery" class="queryDisplay floatLeft hidden"></li>
+                <li id="systemQuery" class="queryDisplay fillGreen floatLeft hidden"></li>
+                <li id="subsystemQuery" class="queryDisplay fillBlue floatLeft hidden"></li>
+                <li id="otherQuery" class="queryDisplay fillPink floatLeft hidden"></li>
             </ul>
         </div>
     </section>
