warning message on sensitive sql keywords

--- a/src/GUI/index/index.html
+++ b/src/GUI/index/index.html
@@ -122,6 +122,12 @@
     </div>
     <!-- End of Auto Updater -->
 
+    <!-- Warning Templates -->
+
+    <div id="warningTemp" class="alert alert-warning hidden errorDisplay" role="alert"></div>
+
+    <!-- End of warning templates -->
+
 </body>
     <script src="./index.js"></script>
     <script src="../../auto-updater/updater.js"></script>
