better query displays

--- a/src/GUI/index/index.html
+++ b/src/GUI/index/index.html
@@ -71,7 +71,7 @@
                 <li class="floatLeft">Queries: </li>
                 <li id="systemQuery" class="queryDisplay fillGreen floatLeft hidden"></li>
                 <li id="subsystemQuery" class="queryDisplay fillBlue floatLeft hidden"></li>
-                <li id="otherQuery" class="queryDisplay fillPink floatLeft hidden"></li>
+                <li id="otherQuery" class="queryDisplay fillGold floatLeft hidden"></li>
             </ul>
         </div>
     </section>
