god's hands now

--- a/src/GUI/index/index.html
+++ b/src/GUI/index/index.html
@@ -47,14 +47,14 @@
 
             <div class="col-sm-1 breathe-top">
                 <!-- Order by Dropdown -->
-                <div class="dropdown">
+                <!-- <div class="dropdown">
                     <button id="sortDrp" class="btn dropdown-toggle btnDropdown"
                         type="button" data-toggle="dropdown"><strong>Order By</strong>
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
-                        <!-- This is loaded dynamically from the database (all subsystem names) -->
+                         This is loaded dynamically from the database (all subsystem names) 
                     </ul>
-                </div>
+                </div> -->
             </div>
 
             <!-- Opens the add window -->
