--- a/src/GUI/index/index.html
+++ b/src/GUI/index/index.html
@@ -122,22 +122,14 @@
 
     <!-- End of warning templates -->
 
+    
+    <!-- Space Background
+
+    <div class="stars"></div> -->
+
+
 </body>
     <script src="./index.js"></script>
     <script src="../../auto-updater/updater.js"></script>
 </html>
 
-
-<!-- Space Background
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=2.0">
-    <link rel="stylesheet" href="index.css">
-    <title>Document</title>
-</head>
-<body>
-    <div class="stars"></div>
-</body>
-</html> -->
