--- a/src/GUI/newMenu/newMenu.html
+++ b/src/GUI/newMenu/newMenu.html
@@ -80,7 +80,7 @@
   <label style= "position:relative; left:400px; top:-120px; color:rgb(245, 241, 241)" for="endDate"> End Date 📅  <input type="date" id="endDate" name="endDate"  class="inputText"> </label>
 
 
-  <label style= "position:relative; left:400px; top:-120px; color:rgb(243, 240, 240)" for="days"> Days 🔢  <input type="number" id="days" name="days" class="inputText"> </label>
+  <label style= "position:relative; left:400px; top:-120px; color:rgb(243, 240, 240)" for="days"> Percent %  <input type="number" id="days" name="days" class="inputText"> </label>
   
  
   <label style= "position:relative; right:40px; top:-70px; color:rgb(238, 238, 246)" for="issueTitle"> <input type="text" id="name"  class="inputText" name="issueTitle" placeholder="Issue Title" rows="15"></label>
